apps/overlays/production/production-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: production-route
  namespace: production 
spec:
  parentRefs:
    - name: eg
      namespace: default 
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pro
      backendRefs:
        - name: production-healthcare-frontend
          port: 80
